# MCP_exploration

./: README.md  env.example  env_template.txt  main.py  pyproject.toml  result.md  server_config.json
docs/: ARCHITECTURE.md  EXAMPLES.md
scripts/: README.md  bedrock_inference.py  function_calling.py
scripts/batch_processing/: batch_inference.py  s3_utils.py
scripts/batch_processing/docs/: batch_processing_slide.jsx  project_structure.jsx
scripts/bedrock/: converse.py
scripts/bedrock/prompt_caching/: calculate_cost.py  compare.py  print_metrics.py  prompt.py  run.py
scripts/bedrock/prompt_caching/output/: cache_metrics_cached.json  cache_metrics_uncached.json
scripts/elicitation/: client.py  server.py
scripts/notification/: client.py  server.py
scripts/sampling/: client.py  server.py
src/: agent.py  calendar_integration.py  client.py  client_rich.py  email_service.py  models.py  scheduler.py  server.py  settings.py
src/clients/: agent.py  client.py
src/papers/ai_agent/: papers_info.json
src/papers/autonomous_cars/: papers_info.json
src/papers/neuro_science/: papers_info.json
src/papers/quantum_field/: papers_info.json
src/papers/reinforcement_learning/: papers_info.json
src/papers/voice_agent/: papers_info.json
src/servers/: research.py
src/utils/: search_papers.py
