[project]
name = "mcp-exploration"
version = "0.1.0"
description = "Research Agent with MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "langfuse>=3.11.2",
    "mcp>=1.25.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.14.0",
    "pydantic>=2.5.0",
    "pydantic-ai>=1.39.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]
